--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,11 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Mohammad Shafinul
 middle_name: 
 last_name: Haque
-contact_note: toshafin[at]gmail[dot]com>
-  You can even add a little note about which of these is the best way to reach you.
-description: Associate Professor > # the ">" symbol means to ignore newlines until "footer_text:"
+contact_note: >
+ toshafin[at]gmail[dot]com
+ You can even add a little note about which of these is the best way to reach you.
+description: >
+  Associate Professor  # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
