--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ contact_note: >
  toshafin[at]gmail[dot]com
  You can even add a little note about which of these is the best way to reach you.
 description: >
-  Associate Professor  # the ">" symbol means to ignore newlines until "footer_text:"
+  Associate Professor  # the " " symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
